# simplelex

./: .gitignore  CMakeLists.txt  simplelex.cpp  simplelex.hpp  slinplace.cpp  slinplace.hpp
sldemo/: .gitignore  sldemo.sln
sldemo/sldemo/: sldemo.cpp  sldemo.vcxproj  sldemo.vcxproj.filters
