cmake_minimum_required (VERSION 3.8)

project ("simplelex" LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()


set(LEX_SOURCES
    simplelex.hpp
    simplelex.cpp
    slinplace.hpp
    slinplace.cpp
)

set(ALL_SOURCES ${LEX_SOURCES})

add_library(simplelex ${ALL_SOURCES})


if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET simplelex PROPERTY CXX_STANDARD 20)
endif()
